# expression

./: components.json  package-lock.json  package.json  proxy.ts
app/: globals.css  layout.tsx  page.tsx
framework/: .gitignore  Makefile  pyproject.toml  schema.ts
framework/docs/: DOCS.md  PLUGINS.md
framework/examples/household-budget/: budget.md  budget_model.py  expression.py  household.py  pyproject.toml  salary.md  salary_model.py  sweet.py
framework/examples/household-budget/outputs/: model.json  result.json
framework/examples/household-budget/tests/: test_models.py
framework/examples/llm-revenue-compute/: expression.md  expression.py  main.py  pyproject.toml  sweet.md  sweet.py
framework/examples/llm-revenue-compute/.model/: snapshot.json
framework/examples/llm-revenue-compute/outputs/: model.json  model.xlsx  result.json
framework/examples/lovable-investment/: expression.py
framework/examples/lovable-investment/outputs/: result.json
framework/examples/portfolio-fund/: expression.py  sweet.py
framework/examples/portfolio-fund/outputs/: model.json  result.json
framework/examples/salary2/: expression.py  sweet.py
framework/examples/salary2/outputs/: model.json  result.json
framework/examples/startup-revenue/: expression.py
framework/examples/startup-revenue/outputs/: result.json
framework/examples/tesla/: expression.py
framework/examples/tesla/outputs/: result.json
framework/plugins/claude/: README.md
framework/plugins/claude/.claude-plugin/: marketplace.json  plugin.json
framework/plugins/claude/commands/: diff.md  explain.md  export.md  run.md  show.md
framework/plugins/claude/reference/: DOCS.md
framework/plugins/claude/skills/: excel-fidelity  harness-adapter  import-excel  override-discipline  parameter-elicitation  small-step-iteration  sweet-framework
framework/plugins/codex/: README.md
framework/plugins/codex/.codex-plugin/: plugin.json
framework/plugins/codex/reference/: DOCS.md  SPECIFICATION.md
framework/plugins/codex/skills/: bottom-up-modeling  circularity-resolution  harness-adapter  import-excel  override-discipline  parameter-elicitation  small-step-iteration  sweet-framework
framework/plugins/marketplace/: claude.json  codex.json
framework/plugins/shared/: install.sh  skills-link.sh  uninstall.sh
framework/specifications/: FEATURE WISH LIST.md  PHASE0_PROPOSED_CHANGES.md  PHASE1_PROPOSED_CHANGES.md  PHASE2.0_PROPOSED_CHANGES.md  PHASE2.1_PROPOSED_CHANGES.md  PHASE3_PROPOSED_CHANGES.md  PHASE4_MULTI_MODEL.md  SPECIFICATION.md
framework/src/expression/: cli.py  core.py  dataset.py  docsync.py  output.py  snapshot.py  sugar.py  xl.py
framework/src/expression/agent/: context.py  loop.py  tools.py
framework/src/expression/agent/harnesses/: anthropic_api.py
framework/src/expression/excel/: __init__.py  _layout.py  export.py  import_.py  verify.py
framework/src/expression/skills/circularity-resolution/: SKILL.md
framework/src/expression/skills/excel-fidelity/: SKILL.md
framework/src/expression/skills/expression-framework/: SKILL.md
framework/src/expression/skills/harness-adapter/: SKILL.md
framework/src/expression/skills/import-excel/: SKILL.md
framework/src/expression/skills/parameter-elicitation/: SKILL.md
framework/src/sweet/: __init__.py  __main__.py  cli.py  core.py  docsync.py  output.py  overrides.py  snapshot.py  solver.py  sugar.py  trace.py
framework/src/sweet/agent/: __init__.py  context.py  harness.py  loop.py  skills.py  tools.py
framework/src/sweet/excel/: __init__.py  _formula.py  import_.py
framework/tests/: test_agent_loop.py  test_dataset.py  test_depends.py  test_docsync.py  test_excel_export.py  test_excel_import.py  test_multidim.py  test_multimodel.py  test_overrides.py  test_phase0.py  test_prd_examples.py  test_print.py  test_scalar_xl.py  test_skills.py  test_snapshot.py  test_sugar.py  test_trace.py
(+54 files in other folders)
