[project]
name = "sweet"
version = "0.1.0"
description = "A CLI for modeling Excel-like spreadsheets as Python DAGs."
readme = "specifications/SPECIFICATION.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Pietro Casella" }]
dependencies = [
    "networkx>=3.2",
    "openpyxl>=3.1",
    "typer>=0.12",
]

[project.scripts]
sweet = "sweet.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyright>=1.1.350",
]
# Optional formula evaluator for round-trip verification on export. We fall
# back to a pure-Python AST-based evaluator when this isn't installed.
verify = [
    "formulas>=1.2",
]
# Optional: needed for `sweet agent --harness=anthropic-api`.
agent = [
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sweet"]

[tool.hatch.build.targets.wheel.force-include]
"src/sweet/skills" = "sweet/skills"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]  # B008: Typer's `Option(...)` defaults are idiomatic.

[tool.ruff.lint.per-file-ignores]
# Layer-2 row bodies use bare names (`first`, `n`, `t`, row names) that the
# AST sugar rewrites — they're not real Python references at lint time.
"tests/test_sugar.py" = ["F821"]
"tests/test_prd_examples.py" = ["F821"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# networkx ships incomplete generic stubs (DiGraph[Unknown]); silence the noise
# from third-party generics. Our own code remains under strict checking.
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
# Layer-2 row bodies use bare identifiers (`first`, `n`, `t`, row names) that
# the AST sugar resolves at class-definition time. Strict type checking sees
# them as unbound names; the rewriter handles them, so silence those reports.
reportUndefinedVariable = "warning"
# `time = periods(...)` shadows Model.time (a property on the base class).
# Subclass-of-Model is the only valid spelling; relax the override checks.
reportIncompatibleMethodOverride = "warning"
reportAssignmentType = "warning"
reportMissingParameterType = "warning"
# Internal modules (solver, sugar, overrides) intentionally read class-level
# state populated by ``Model.__init_subclass__``. Tests also poke into private
# state to verify caching and DAG construction. Noisy at strict.
reportPrivateUsage = "warning"
# Same property/Periods type-level shadow leaks into call sites that pass
# ``time`` to ``matrix(...)`` / ``@row(over=[...])``.
reportArgumentType = "warning"
# Defensive isinstance(...) on ``type[Model]`` arguments is intentional; users
# can pass non-Model types via Any-typed code paths.
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryComparison = "warning"
# Rare false positive when modules are dynamically loaded via importlib.
reportAttributeAccessIssue = "warning"
reportUnusedClass = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv.workspace]
members = [
    "demo",
    "examples/llm-revenue-compute",
    "examples/household-budget",
]
